--- a/FitnessTracker/build.gradle
+++ b/FitnessTracker/build.gradle
@@ -4,6 +4,13 @@ plugins {
 }
 
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'war'
+war {
+  enabled = true
+  archiveName = "${baseName}.war"     // Our app name, as defined in settings.gradle
+  destinationDir = file("../")      // workspace root directory
+}
+
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -19,4 +26,5 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation ('org.springframework.boot:spring-boot-starter-tomcat')
 }
